--- a/LeChangeNewDemo/Podfile
+++ b/LeChangeNewDemo/Podfile
@@ -26,5 +26,6 @@ target 'LeChangeDemo' do
   pod 'ObjectMapper', '~> 3.5.3'
   # Pods for LeChangeDemo
 #  pod 'LCOpenSDK', '~> 3.12.00'
+  pod 'LCOpenSDK', :path => '../'
 
 end
