--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ iOSInjectionProject/
 .DS_Store
 Framework/.DS_Store
 LeChangeNewDemo/.DS_Store
+LeChangeNewDemo/Pods
 Framework/.DS_Store
 .DS_Store
 .DS_Store
