--- a/LeChangeNewDemo/Podfile
+++ b/LeChangeNewDemo/Podfile
@@ -3,14 +3,15 @@
   inhibit_all_warnings!
   use_frameworks!
 
-#post_install do |installer|
-#  installer.pods_project.targets.each do |target|
-#    target.build_configurations.each do |config|
-#      config.build_settings['ARCHS'] = 'arm64'
-#      config.build_settings['VALID_ARCHS'] = 'arm64'
-#    end
-#  end
-#end
+post_install do |installer|
+    installer.generated_projects.each do |project|
+          project.targets.each do |target|
+              target.build_configurations.each do |config|
+                  config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+               end
+          end
+   end
+end
 
 target 'LeChangeDemo' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -28,6 +29,6 @@ target 'LeChangeDemo' do
   pod 'SAMKeychain', '~> 1.5.3'
   pod 'GTMBase64', '~> 1.0.1'
   # Pods for LeChangeDemo
-  pod 'LCOpenSDK', '~> 3.12.02'
+  # pod 'LCOpenSDK', '~> 3.12.03'
 
 end
